--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -21,7 +21,9 @@ $dark-gray: rgb(70,70,70)
 
     z-index: 10
 
-    
+.living_room_page .room_home_corner
+    grid-column: 8/9
+    grid-row:1/2
 
 .time_date_info
     text-align: center
