--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -37,6 +37,8 @@
 
 /* new power menu */
 
+
+
     .room_selection_power_menu{
         grid-column: 1/13;
         grid-row: 1/9;
@@ -112,20 +114,21 @@
     
     }
         .active_zone_card{
-            width: 70%;
+            width: 80%;
             height: 100%;
             grid-column: 1/6;
             background-color: black;
-            border-radius: 50px;
+            border-radius: 100px;
             display: grid;
             grid-template-columns: repeat(6,1fr);
+            grid-template-rows: repeat(2,1fr);
             justify-items: center;
             align-items: center;
             border: solid 3px white;
 
 
             background-size: 300% 300%;
-            background-image: linear-gradient(-45deg,rgb(20, 72, 133)25%,rgb(20, 95, 130) 50%,rgb(33, 98, 172) 100%);
+            background-image: linear-gradient(-45deg,rgb(60, 60, 60)25%,rgb(37, 43, 37) 50%,rgb(82, 86, 91) 100%);
             -webkit-animation: AnimateBG 10s ease infinite;
                     animation: AnimateBG 10s ease infinite;
         }
@@ -136,16 +139,38 @@
             -webkit-animation: AnimateBG 3s ease infinite;
                     animation: AnimateBG 3s ease infinite;
         }
-            .active_zone_card p{
-                grid-column: 2/6;
+            .active_zone_card .active_zone_title{
+                grid-column: 1/3;
+                grid-row: 1/3;
                 width: 100%;
+                height: 100%;
+                box-sizing: border-box;
+                padding: 1rem;
+                font-size: xx-large;
                 text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+            }
+
+            .active_zone_card .active_zone_message{
+                grid-column: 3/6;
+                grid-row: 1/3;
+                width: 100%;
                 font-size: x-large;
+                text-align: center;
+                box-sizing: border-box;
+                padding: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
             .active_zone_card .btn_circle{
-                
-                height: 85%;
-                width: 85%;
+                grid-column: 6/7;
+                grid-row: 1/3;
+                height: 5.5rem;
+                width: 5.5rem;
                 border: solid 1px white;
                 background-color: rgb(195, 36, 36);
             }
@@ -211,6 +236,8 @@
     z-index: 1;
   }
 
+
+
     .room_card::before{
         content: " ";
         position: absolute;
@@ -243,6 +270,26 @@
                 animation: AnimateBG 6s ease infinite;
       }
       
+
+      .room_card_active .room_name{
+        font-size: 1.75rem;
+        }
+      .room_card .room_name{
+        font-size: 1.75rem;
+        }
+
+        .room_card_active img{
+            padding: 4px;
+        }
+        .room_card img{
+            padding: 4px;
+        }
+
+    .active_icon{
+        box-shadow: 0px 0px 10px rgb(186, 195, 206), inset 0px 0px 20px 10px rgb(178, 178, 179);
+        border-radius: 25%;
+      
+    }
       @-webkit-keyframes AnimateBG {
         0% {
           background-position: 0% 50%;
@@ -464,6 +511,11 @@
   
 }
 .room_card{
+    height: 100%;
+    width: 100%
+}
+
+.room_card_active{
     height: 100%;
     width: 100%
 }
