--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -636,7 +636,7 @@
 ------------------- tile 
 */
 
-.light_tile{
+.light_tile , .active_light_tile{
     height: 15rem;
     width: 15rem;
    
@@ -652,8 +652,25 @@
 
     animation: left-load 1s;
     position: relative;
+}
+
+#lights-9 .light_tile , .active_light_tile{
+    height: 13rem;
+    width: 12rem;
+   
+}
+
+.active_light_tile{
+
+    background-size: 300% 300%;
+    background-image: linear-gradient(315deg, rgb(255, 195, 0), rgb(236, 124, 87), rgba(255, 195, 35));
+    animation: left-load 1s , AnimateBG 10s ease infinite;
 
 }
+
+
+
+
     .light_tile::before{
         content: " ";
         position: absolute;
@@ -669,12 +686,19 @@
 
     .light_tile .light_info{
         z-index: 1;
-        width: 80%;
-        flex-direction: column-reverse;
+        width: 100%;
+    
     }
         .light_tile .light_info p{
            font-size: x-large;
         }
+        #lights-9 .active_light_tile .light_info p{
+            font-size: x-large;
+        
+         }
+         #lights-9 .light_tile .light_info p{
+            font-size: x-large;
+         }
         .sub_text{
             font-size: medium;
         }
@@ -696,13 +720,7 @@
     }
 
 
-    .light_info{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 20%;
-    }
+
     .light_controls{
         display: flex;
         justify-content: center;
@@ -1126,17 +1144,23 @@
                 overflow: visible;
             }
     
-            #breakfast_nook.light_container{
-                grid-row: 1/9;
-                height: 100%;
-                grid-template-rows: repeat(4,1fr);
-            }
-                .light_tile{
+        
+                .light_tile, .active_light_tile{
                     height: 100%;
                     width: 100%;
                     gap: 0;
                     justify-content: space-evenly;
                 }
+
+            
+                 .light_tile .light_info p{
+                    font-size: x-large;
+                    display: flex;
+                    justify-content:center ;
+                    align-items: center;
+                    box-sizing: border-box;
+                    padding: 1rem;
+                 }
                 .light_tile .light_info p {
                     font-size: larger;
                 }
@@ -1152,7 +1176,54 @@
                             height: 3.5rem;
                             width: 3.5rem;
                         }
-                   
+
+                .light_container#lights-9{
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 11%;
+                    width: 90%;
+                }
+                
+                #lights-9 .light_tile, .active_light_tile{
+                    height: 100%;
+                    width: 100%;
+                   display: grid;
+                   grid-template-columns: repeat(4,1fr);   
+                   justify-items: center;
+                   align-items: center; 
+                   border-radius: 10px;
+                   overflow: hidden;
+
+                  
+
+                }
+                    #lights-9 .light_info{
+                        grid-column: 1/4;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-content: center;
+                        width: 100%;
+                        height: 100%;
+                    }
+                    #lights-9 .light_info p{
+                       display: flex;
+                       justify-content: center;
+                       align-items:center;
+                       box-sizing: border-box;
+                       padding: 1rem;
+                    }
+
+                    .light_info{
+                        grid-column: 1/4;
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                    
+                        width: 100%;
+                        height: 30%;
+                    }
         /*
         ----------------------------------------------------------------------------------------------------- Controller layout 
         
@@ -1481,7 +1552,7 @@
         }
 
 
-    @media only screen and (min-width: 776px) and (orientation: portrait){
+    @media only screen and (min-width: 720px) and (orientation: portrait){
         #mobile_power{
             display: block;
         }
@@ -1626,9 +1697,8 @@
         /*
         ---------------------------------------------------------------------------------------------------------- light_container
         */        
-        
         .lights_app{
-            grid-column: 2 / 12;
+            grid-column: 1 / 13;
             grid-row: 2 / 8;
             height: 100%;
             width: 100%;
@@ -1640,27 +1710,36 @@
     
             .light_container{
                 grid-row: 2/8;
+                grid-column: 1/10;
+                width: 90%;
+                height: 90%;
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
-                grid-auto-rows: 30%;
-                position: relative;
+                grid-template-rows: repeat(3, 1fr);
+    
                 top: 5px;
                 overflow: visible;
-                width: 95%;
-                height: 90%;
             }
     
-            #breakfast_nook.light_container{
-                grid-row: 1/9;
-                height: 100%;
-                grid-template-rows: repeat(4,1fr);
-            }
-                .light_tile{
+        
+                .light_tile, .active_light_tile{
                     height: 100%;
                     width: 100%;
                     gap: 0;
+                 
                     justify-content: space-evenly;
+
                 }
+
+            
+                 .light_tile .light_info p{
+                    font-size: x-large;
+                    display: flex;
+                    justify-content:center ;
+                    align-items: center;
+                    box-sizing: border-box;
+                    padding: 1rem;
+                 }
                 .light_tile .light_info p {
                     font-size: xx-large;
                 }
@@ -1676,7 +1755,57 @@
                             height: 3.5rem;
                             width: 3.5rem;
                         }
-                   
+
+                .light_container#lights-9{
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 11%;
+                    width: 90%;
+                }
+                
+                #lights-9 .light_tile, .active_light_tile{
+                    height: 100%;
+                    width: 100%;
+                   display: grid;
+                   grid-template-columns: repeat(4,1fr);   
+                   justify-items: center;
+                   align-items: center; 
+                   border-radius: 10px;
+                   overflow: hidden;
+
+                  
+
+                }
+                    #lights-9 .light_info{
+                        grid-column: 1/4;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-content: center;
+                        width: 100%;
+                        height: 100%;
+                    }
+                    #lights-9 .light_info p{
+                       display: flex;
+                       justify-content: center;
+                       align-items:center;
+                       box-sizing: border-box;
+                       padding: 1rem;
+                    }
+
+                    .light_info{
+                        grid-column: 1/3;
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                    
+                        width: 100%;
+                        height: 30%;
+                    }
+                    .light_info p {
+                        font-size: x;
+                    }
         /*
         ----------------------------------------------------------------------------------------------------- Controller layout 
         
@@ -1975,6 +2104,8 @@
         }
 
 
+    
+
 /*
 ----------------------------------------------------------------------------------------------------------------- iphone 14
 
@@ -2078,7 +2209,7 @@
     }
       
     
-    .light_tile{
+    .light_tile, .active_light_tile{
       display: none;
     }
        
