--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -160,6 +160,7 @@
     grid-row: 2/11;
     display: flex;
     justify-content: center;
+    align-items: center;
     
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -169,7 +170,9 @@
 }
 
     .album_art img{
-        width: 100%;
+
+        width: 90%;
+        height: 90%;
         z-index: 10px;
         border-radius: 15px;
     }
@@ -205,7 +208,7 @@
     padding-right: 1rem;
 }
     .album_info_title{
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-align: center;
     }
         .album_info_artist{
@@ -911,7 +914,97 @@
 
   
 
+ 
+
+
+
+/*
+---------------------------------------------------------------------------------------------------------------------------------  Logos from Streamers
+*/
+
+.streaming_service_logo{
+    grid-column: 2/9;
+    grid-row: 1/2;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%
+}
+    .Spotify_logo{
+        
+        height: 3rem;
+    }
+    .AmazonMusic_logo{
+        height: 3rem
+    }
+    .Deezer_logo{
+        height: 3rem;       
+    }
+    .iHeartRadio_logo{
+        height: 3rem;
+    }
+    .liveOne_logo{
+        height: 3rem
+    }
+    .murfie_logo{
+        height: 3rem
+    }
+    .pandora_logo{
+        height: 3rem
+    }
+    .sirius_logo{
+        height:2.5rem
+    }
+    .soundMachine_logo{
+        height:2.5rem
+    }
+    .tidal_logo{
+        height: 5.5rem
+    }
+    .tuneIn_logo{
+        height: 3rem;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     @media only screen and (max-device-width: 550px)  and (orientation: portrait){
+
+        .browser_container{
+            grid-column:2/9;
+            grid-row: 2/11;
+            width: 115%;
+            height: 100%;
+        }
+
+        .broswer_title{
+            font-size: larger;
+        }
         .audio_dashboard{
             grid-template-rows: 10% 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 10%;
             align-items: center;
@@ -971,9 +1064,9 @@
         
 
         .music_player{
-            grid-column:2/9;
+            grid-column:1/10;
             grid-row: 2/11;
-            width: 115%;
+            width: 90%;
             height: 100%;
             padding: 1px;
             display: grid;
@@ -990,7 +1083,12 @@
 
                 border-bottom-left-radius: 0px;
                 border-bottom-right-radius: 0px;
+                
             }
+                .album_art img{
+                    width: 100%;
+                    height: 100%;    
+                }
             .album_info{
                 grid-column: 1/11;
                 grid-row: 6/8;
@@ -1054,10 +1152,13 @@
                 grid-column: 1/11;
                 grid-row: 9/10;
                 width: 100%;
-
                 border-bottom-left-radius: 20px;
                 border-bottom-right-radius: 20px;
             }
+                .playback_controls .btn_circle{
+                    height: 2.75rem;
+                    width: 2.75rem;
+                }
             .status_info{
                 grid-column: 1/11;
                 grid-row: 10/11;
@@ -1111,8 +1212,20 @@
                     width: 3.5rem;
                 }
 
+                .active_message_container h1{
+                    width: 100%;
+                }
+
+                .active_message_buttons{
+                    width: 85%;
+                    gap: 10px;
+                }
 
 
+
+                .album_info{
+                    padding: 10px
+                }
 
 
 
@@ -1192,90 +1305,20 @@
 
 
 
+            .streaming_service_logo{
+                display: none;
+            }
+
+
+            .album_info_title{
+                font-size: x-large;
+            }
+
                
 
 
 
     }
-
-
-
-
-
-
-/*
----------------------------------------------------------------------------------------------------------------------------------  Logos from Streamers
-*/
-
-.streaming_service_logo{
-    grid-column: 2/9;
-    grid-row: 1/2;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%
-}
-    .Spotify_logo{
-        
-        height: 3rem;
-    }
-    .AmazonMusic_logo{
-        height: 3rem
-    }
-    .Deezer_logo{
-        height: 3rem;       
-    }
-    .iHeartRadio_logo{
-        height: 3rem;
-    }
-    .liveOne_logo{
-        height: 3rem
-    }
-    .murfie_logo{
-        height: 3rem
-    }
-    .pandora_logo{
-        height: 3rem
-    }
-    .sirius_logo{
-        height:2.5rem
-    }
-    .soundMachine_logo{
-        height:2.5rem
-    }
-    .tidal_logo{
-        height: 5.5rem
-    }
-    .tuneIn_logo{
-        height: 3rem;
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
