--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -147,10 +147,99 @@ $dark-gray: rgb(70,70,70)
 
 
       
-            
+ 
+@media only screen and (max-width: 550px) and (orientation: portrait) 
+    .living_room_page .room_home_corner
+        grid-column: 11/13
+        grid-row:1/2
+
+   
+    .living_room_page
+        display: grid
+        grid-template-columns: repeat(12, 1fr)
+        grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%
+        justify-items: start
+        align-items: center
+        gap: 10px
+        overflow: hidden
+        height: 100vh
+        width: 100vw
+        box-sizing: border-box
+        padding: 1rem
+        z-index: 10
+        position: relative
+        
+        
+
+    .home_power_container
+        align-items: flex-start
+        justify-content: flex-end
+        z-index: 100
+
+   
+
+    .home_power_container .home_button
+        width: max-content
+        height: 2rem
+        border-radius: 30px 
+
+
+    .living_room_page .power_menu_overlay
+        grid-column: 1/9
+      
+        position: relative
+        right: 0px
+
+    .living_room_page .power_menu
+        width: 80%
+
+    .source_select_home
+        padding-inline: 1rem
+  
+    .time_date_info 
+        grid-column: 1/13
+        grid-row: 1/3
+        width: 100%
+
+        background-color: transparent
+        backdrop-filter: blur(0px)
+        border-radius: 0%
+    
+    .time_date_info p 
+        font-size: x-large
+    
+    .weather_info
+        grid-column: 3/9
+        grid-row: 4/6
+
+        width: 100%
+        display: none
+    
+    .dashboard_info
+        grid-column: 1/9
+        grid-row: 3/9
+        width: 100%
+        height: 100%
+     
+    
+    .dashboard_container
+        grid-row: 3/8
+        grid-column: 2/12
+        display: grid
+        grid-template-columns: repeat(1,1fr)
+        grid-template-rows: repeat(3,1fr)
+        width: 100%
+        height: 75%
+       
+    
+    .room_container
+        height: 100%
+        width: 100% 
+       
+           
             
 
-@media screen  and (orientation: portrait) 
+@media only screen and (min-width: 560px) and (orientation: portrait) 
 
 
     .time_date_info 
@@ -187,75 +276,6 @@ $dark-gray: rgb(70,70,70)
 
                         
                 
-
-@media only screen and (max-device-width: 550px) and (orientation: portrait) 
-    .home_power_container
-        align-items: flex-start
-        justify-content: flex-end
-        z-index: 100
-
-   
-
-    .home_power_container .home_button
-        width: max-content
-        height: 2rem
-        border-radius: 30px 
-
-
-    .living_room_page .power_menu_overlay
-        grid-column: 1/9
-        width: 120%
-        position: relative
-        right: 0px
-
-    .living_room_page .power_menu
-        width: 80%
-
-    .source_select_home
-        padding-inline: 1rem
-  
-    .time_date_info 
-        grid-column: 1/9
-        grid-row: 1/3
-        width: 100%
-
-        background-color: transparent
-        backdrop-filter: blur(0px)
-        border-radius: 0%
-    
-    .time_date_info p 
-        font-size: x-large
-    
-    .weather_info
-        grid-column: 3/9
-        grid-row: 4/6
-
-        width: 100%
-        display: none
-    
-    .dashboard_info
-        grid-column: 1/9
-        grid-row: 3/9
-        width: 100%
-        height: 100%
-     
-    
-    .dashboard_container
-        grid-row: 3/9
-        grid-column: 1/9
-        display: grid
-        grid-template-columns: repeat(2,1fr)
-        grid-template-rows: repeat(3,1fr)
-        width: 95%
-        height: 85%
-       
-    
-    .room_container
-        height: 100%
-        width: 100% 
-       
-
-
 
     
 
