--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -1077,17 +1077,15 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
 
     .light_map_panel{
         position: relative;
-        z-index: 10;
-           grid-row: 2/8;
-           grid-column: 1/13;
-           height: 100%;
-           width: 100%;
-
-           display: flex;
-           justify-content: center;
-           align-items: flex-start;
-
-           overflow: scroll;
+        z-index: 100;
+        grid-row: 2/8;
+        grid-column: 1/13;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        overflow: scroll;
     }
  
 
@@ -1111,6 +1109,7 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
         justify-content: space-between;
         align-items: center;
         background-color: rgb(70, 70, 70);
+        box-shadow: 0px 0px 10px black;
     }
 
     .light_panel .btn_square p{
@@ -1133,9 +1132,8 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
 
 
     .light_panel_overlay{
-        position: absolute;
-        z-index: 100;
-        grid-row: 2/8;
+        z-index: 300;
+        grid-row: 1/9;
         grid-column: 1/13;
         height: 100%;
         width: 100%;
@@ -1192,6 +1190,18 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
         }
 
 
+
+        #low_light_count{
+            height: 5rem;
+            
+        } 
+        #low_light_count_single{
+            height: 5rem;
+            grid-column: 1/3;
+            
+        } 
+
+
         .panel_light_display{
             grid-column: 1/7;
             grid-row: 2/3;
@@ -1212,6 +1222,7 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
             justify-content: center;
             align-items: center;
             flex-direction: row-reverse;
+        
         }
 
         .button_list .btn_square .btn_image{
