--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -16,6 +16,9 @@
     z-index: 10;
   
     position: relative;
+
+    justify-items: center;
+    align-items: center;
 }
 
 .title_info{
@@ -273,12 +276,23 @@
                 animation: AnimateBG 6s ease infinite;
       }
       
-
+   
       .room_card_active .room_name{
         font-size: 1.75rem;
         }
       .room_card .room_name{
-        font-size: 1.75rem;
+            font-size: 1.75rem;
+            grid-column: 1/4;
+            grid-row: 1/3;
+            height: 100%;
+            width: 100%;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-sizing: border-box;
+            padding: 3rem;
+            padding-top: 4.75rem;
         }
 
         .room_card_active img{
@@ -334,23 +348,17 @@
         grid-column: 1/4;
         grid-row: 1/4;
         width: 100%;
-        display: flex;
-        justify-content: center;
+        height: 100%;
+        display: grid;
+    
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(3,1fr);
+
+        justify-items: center;
         align-items: center;
-        flex-direction: column;
         z-index: 1;
     }
-    .room_card p{
-        font-size: 2rem;
-        grid-column: 1/4;
-        grid-row: 2/3;
-        font-size: 1rem;
-        color: rgb(255, 255, 255);
-        text-align: center;
-        width: 80%;
-        border-bottom:solid 1px gray ;
-        font-size: 1.25rem;
-    }
+ 
 
     .room_card_active p{
         font-size: 2rem;
@@ -370,13 +378,13 @@
         grid-row: 3/4;
 
         gap: .5rem;
-        padding-top: 5px;
+     
         display: flex;
         justify-content: center;
-        align-items: end;
-        width: 100%;
+        align-items: center;
+        width: 75%;
         height: 100%;
-
+        border-top: solid 1px gray;
        
     }
         .icon_preview{
@@ -468,6 +476,8 @@
     }
    
 
+    
+
 
  /*
     ------------------------------------------- Nav
@@ -524,6 +534,10 @@
 }
     .room_card .room_name{
         font-size: large;
+        padding: 0%;
+        padding-left: 10px;
+        padding-right: 10px ;
+        padding-top: 1rem;
     }
 
     .room_selection_power_menu{
@@ -595,6 +609,13 @@
     width: 50%;
     height: 2.5rem;
     border-radius: 30px;
+}
+
+.room_card_active .room_name{
+    
+    font-size: large;
+   
+
 }
 
 
