--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -23,7 +23,7 @@
 
 .title_info{
     grid-row: 1;
-    grid-column: 2/13;
+    grid-column: 3/12;
     margin: 0%;
 
     display: flex;
@@ -361,15 +361,18 @@
  
 
     .room_card_active p{
-        font-size: 2rem;
-        grid-column: 1/4;
-        grid-row: 2/3;
-        font-size: 1rem;
-        color: rgb(255, 255, 255);
+        font-size: 1.75rem;
+        grid-column: 1 / 4;
+        grid-row: 1 / 3;
+        height: 100%;
+        width: 100%;
         text-align: center;
-        width: 80%;
-        border-bottom:solid 1px gray ;
-        font-size: 1.25rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 3rem;
+        padding-top: 4.75rem;
     }
 
 
