--- a/src/assets/css/componets_css/sleepTimer.css
+++ b/src/assets/css/componets_css/sleepTimer.css
@@ -1,7 +1,7 @@
 
 
 
-.sleep-timer{
+.sleep-timer, .sleep-timer-com{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -30,19 +30,30 @@
         background-color: rgb(65, 60, 60);
         color: white;
     }
+
+    .sleep-timer button p {
+        font-size: large;
+    }
         .sleep-timer button:first-child{
-            background-color: rgb(194, 44, 44);
+            background-color:  rgb(194, 44, 44);
         }
 
         .sleep-timer button:last-child{
             background-color: rgb(194, 44, 44);
             font-size: large;
-            font-weight: 600;
         }
 
         .sleep-timer button:active{
             box-shadow: inset 0px 0px 10px 1px rgb(0, 0, 0);
         }
+
+.close-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    gap: .125rem;
+}
 
 
 .sleep-timer::before{  
@@ -58,8 +69,63 @@
 }
 
 
+.sleep-timer-com::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.5250;
+}
 
+.sleep-timer-com{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
+    gap: 10%;
+}
+
+.sleep-timer-com p{
+    z-index: 10;
+    text-align: center;
+    color: white;
+    font-size: larger;
+}
+
+.sleep-timer-com div{
+    z-index: 10;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    flex-direction: column;
+}
+
+.sleep-timer-com div button{
+    width: 100%;
+    height: 3.25rem;
+    border-radius: 10px;
+    border: none;
+}
+
+.sleep-timer-com div button p{
+    text-align: center;
+    color: white;
+    font-size: larger;
+}
+    .sleep-timer-com div button:first-child{
+        background-color: rgb(52, 151, 187);
+    }
+
+    .sleep-timer-com div button:last-child{
+        background-color: rgb(145, 145, 145);
+    }
 @keyframes sleep-timer-menu {
     
     0%{
@@ -80,7 +146,7 @@
 @media only screen and (max-width: 550px) and (orientation: portrait){
 
 
-    .sleep-timer{
+    .sleep-timer,.sleep-timer-com{
         grid-column: 8/13;
     }
 
