--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -18,8 +18,9 @@ $dark-gray: rgb(70,70,70)
     width: 100vw
     box-sizing: border-box 
     padding: 1rem
-
     z-index: 10
+    width: 1200px
+    height: 800px
 
 .living_room_page .room_home_corner
     grid-column: 8/9
@@ -278,6 +279,10 @@ $dark-gray: rgb(70,70,70)
                 
 
     
+
+    
+
+
 
 
 
